Add code logic to create view 2 and view 3 table

--- a/process/create_view_3.ipynb
+++ b/process/create_view_3.ipynb
@@ -289,15 +289,8 @@
     "\n",
     "input_df = pd.read_excel(input_file_path, dtype=str)\n",
     "input_df['KPI_value'] = input_df['KPI_value'].astype('float')\n",
-    "input_df['SKU'] = input_df['Brand']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "input_df['SKU'] = input_df['Brand']\n",
+    "\n",
     "input_df['Brand'] = input_df['SKU'].apply(lambda x : get_brand_name(x))\n",
     "perf_si_df = input_df.groupby(by = ['Date', 'Province', 'Brand', 'KPI'])['KPI_value'].sum().reset_index()"
    ]
@@ -408,7 +401,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "spen_crm_df = input_df\n",
+    "spen_crm_df = input_df[(input_df['AIP'] == 'I') | (input_df['AIP'] == 'P')].copy()\n",
     "spen_crm_df['Brand'] = spen_crm_df['SKU'].apply(lambda x : get_brand_name(x))\n",
     "spen_crm_df = spen_crm_df[view3_columns]"
    ]
@@ -451,7 +444,7 @@
    "outputs": [],
    "source": [
     "view3_df = view3_df.append(spen_crm_df, ignore_index = True)\n",
-    "spen_crm_df[['Cost_type_1','Cost_type_2','Cost_type_3','Cost_type_4']].drop_duplicates()"
+    "spen_crm_df[['Cost_type_1','Cost_type_2','Cost_type_3','Cost_type_4', 'AIP']].drop_duplicates()"
    ]
   },
   {
@@ -554,15 +547,7 @@
    "outputs": [],
    "source": [
     "view3_df = view3_df.fillna('')\n",
-    "view3_df[['Cost_type_1','Cost_type_2','Cost_type_3','Cost_type_4', 'AIP', 'Brand']].drop_duplicates()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "\n",
     "an_df = view3_df[['Province', 'Cost_type_1', 'Cost_type_2', 'Cost_type_3', 'Cost_type_4', 'AIP']].drop_duplicates()\n",
     "nc_df = view3_df[['Province', 'Cost_type_1', 'Cost_type_2', 'Cost_type_3', 'Cost_type_4', 'AIP']].drop_duplicates()"
    ]
