--- a/process/prepare_trade_support.ipynb
+++ b/process/prepare_trade_support.ipynb
@@ -30,7 +30,7 @@
     "config['brand_to_province_brand_file'] = '202001-05_brand_to_province_brand.xlsx'\n",
     "\n",
     "# output files\n",
-    "config['Trade support output'] = 'Trade support split 202001-04.xlsx'"
+    "config['spending_trade_support'] = 'spending trade support 202001-04.xlsx'"
    ]
   },
   {
@@ -45,7 +45,7 @@
     "\n",
     "ts_df = pd.read_excel(input_file_path, dtype=str)\n",
     "\n",
-    "ts_df.columns = ['YearMonth', 'SKU', 'Cost']\n",
+    "ts_df.columns = ['YearMonth', 'Brand', 'Cost']\n",
     "ts_df[\"Cost\"] = ts_df[\"Cost\"].astype(\"float\")"
    ]
   },
@@ -55,24 +55,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_brand_name(brand):\n",
-    "    if brand == 'NC':\n",
-    "        return 'Nutrilon'\n",
-    "    elif (brand=='AC') | (brand == 'AP'):\n",
-    "        return 'Aptamil'\n",
-    "    return ''\n",
-    "\n",
-    "ts_df['Brand_Name'] = ts_df['SKU'].apply(\n",
-    "        lambda x: get_brand_name(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ts_df = ts_df.groupby(by = ['YearMonth', 'Brand_Name'])['Cost'].sum().reset_index()"
+    "ts_df = ts_df.groupby(by = ['YearMonth', 'Brand'])['Cost'].sum().reset_index()"
    ]
   },
   {
@@ -96,7 +79,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ts_prov_df = pd.merge(ts_df, brand_prov_split, on=['YearMonth', 'Brand_Name'], how='left')"
+    "ts_prov_df = pd.merge(ts_df, brand_prov_split, on=['YearMonth', 'Brand'], how='left')"
    ]
   },
   {
@@ -123,43 +106,12 @@
    "source": [
     "ts_prov_df['Value'] = ts_prov_df['Cost'] * ts_prov_df['Split_Ratio']\n",
     "\n",
-    "ts_prov_df = ts_prov_df[['YearMonth', 'MDM_province_code', 'Brand_Name', 'Value']]\n",
+    "ts_prov_df = ts_prov_df[['YearMonth', 'MDM_province_code', 'Brand', 'Value']]\n",
     "\n",
-    "ts_all_df = ts_prov_df.groupby(by = ['YearMonth', 'Brand_Name'])['Value'].sum().reset_index()\n",
+    "ts_all_df = ts_prov_df.groupby(by = ['YearMonth', 'Brand'])['Value'].sum().reset_index()\n",
     "ts_all_df['MDM_province_code'] = 'National'\n",
     "\n",
-    "ts_prov_df = ts_prov_df.append(ts_all_df, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Create all year, province, KPI combination for 2020"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "all_dates_map = pd.DataFrame(columns=['YearMonth','MDM_province_code', 'Brand_Name'])\n",
-    "all_types= ts_prov_df[['MDM_province_code', 'Brand_Name']].drop_duplicates()\n",
-    "for i in range(1,13):\n",
-    "    year_month = \"2020\" + str(i).zfill(2)\n",
-    "    all_types['YearMonth'] = year_month\n",
-    "    all_dates_map = all_dates_map.append(all_types, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_df = pd.merge(all_dates_map, ts_prov_df, on=['YearMonth','MDM_province_code', 'Brand_Name'], how='left')\n",
-    "output_df = output_df.fillna(0)"
+    "output_df = ts_prov_df.append(ts_all_df, ignore_index=True)"
    ]
   },
   {
@@ -175,27 +127,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def format_yearmonth(year_month):\n",
-    "    return time.strftime(\"%Y/%m/%d\", time.strptime(year_month,\"%Y%m\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_df[\"Date\"] = output_df['YearMonth'].apply(lambda x : format_yearmonth(x))\n",
+    "output_df['Cost_type_1'] = 'Trade Support'\n",
+    "output_df['Cost_type_2'] = ''\n",
+    "output_df['Cost_type_3'] = ''\n",
+    "output_df['Cost_type_4'] = ''\n",
+    "output_df['AIP'] = 'P'\n",
     "\n",
-    "output_df['Level 1'] = 'Trade Support'\n",
-    "output_df['Level 2'] = 'Trade Support'\n",
-    "output_df['Level 3'] = 'Trade Support'\n",
-    "output_df['Level 4'] = 'Trade Support'\n",
-    "output_df['Level 5'] = 'Trade Support'\n",
+    "output_df = output_df[['YearMonth', 'MDM_province_code', 'Cost_type_1', 'Cost_type_2', 'Cost_type_3', 'Cost_type_4', 'AIP', 'Brand', 'Value']]\n",
     "\n",
-    "output_df = output_df[['Date', 'Brand_Name', 'MDM_province_code', 'Level 1', 'Level 2', 'Level 3', 'Level 4', 'Level 5', 'Value']]\n",
-    "\n",
-    "output_df.columns = ['Date', 'Brand', 'Province', 'Level 1', 'Level 2', 'Level 3', 'Level 4', 'Level 5', 'Value']"
+    "output_df.columns = ['Date', 'Province', 'Cost_type_1', 'Cost_type_2', 'Cost_type_3', 'Cost_type_4', 'AIP', 'Brand', 'Spending_value']"
    ]
   },
   {
@@ -206,17 +146,10 @@
    "source": [
     "output_file_path = config[\"project_path\"] + \"/\" \\\n",
     "                        + config[\"temp_folder_path\"] + \"/\" \\\n",
-    "                        + config['Trade support output']\n",
+    "                        + config['spending_trade_support']\n",
     "\n",
     "output_df.to_excel(output_file_path, index=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
