--- a/process/prepare_PC.ipynb
+++ b/process/prepare_PC.ipynb
@@ -31,7 +31,7 @@
     "config['province_to_province_brand_file'] = '202001-05_province_to_province_brand_file.xlsx'\n",
     "\n",
     "# output files\n",
-    "config['pc_output'] = 'PC cost split 202001-04.xlsx'"
+    "config['spending_PC'] = 'spending PC 202001-04.xlsx'"
    ]
   },
   {
@@ -221,7 +221,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pc_brand_df = pc_brand_df[['YearMonth', 'MDM_province_code', 'Cost_type', 'Brand_Name', 'Spending_Value']]"
+    "pc_brand_df = pc_brand_df[['YearMonth', 'MDM_province_code', 'Cost_type', 'Brand', 'Spending_Value']]"
    ]
   },
   {
@@ -230,7 +230,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pc_all_df = pc_brand_df.groupby(by = ['YearMonth', 'Cost_type', 'Brand_Name'])['Spending_Value'].sum().reset_index()\n",
+    "pc_all_df = pc_brand_df.groupby(by = ['YearMonth', 'Cost_type', 'Brand'])['Spending_Value'].sum().reset_index()\n",
     "pc_all_df['MDM_province_code'] = 'National'"
    ]
   },
@@ -240,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pc_all_df = pc_brand_df.append(pc_all_df, ignore_index=True)"
+    "output_df = pc_brand_df.append(pc_all_df, ignore_index=True)"
    ]
   },
   {
@@ -256,7 +256,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pc_all_df[pc_all_df['MDM_province_code'] == np.NAN]"
+    "output_df[output_df['MDM_province_code'] == np.NAN]"
    ]
   },
   {
@@ -265,18 +265,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pc_all_df['Level 5'] = 'PC - ' + pc_all_df['Cost_type']\n",
-    "pc_all_df['Level 4']  = 'PC - ' + pc_all_df['Cost_type']\n",
-    "pc_all_df['Level 3']  = 'PC - ' + pc_all_df['Cost_type']\n",
-    "pc_all_df['Level 2'] = 'Total PC'\n",
-    "pc_all_df['Level 1'] = 'Total A&P'"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Create all year, province, KPI combination for 2020"
+    "output_df['Cost_type_3'] = ''\n",
+    "output_df['Cost_type_4']  = ''\n",
+    "output_df['Cost_type_2']  = 'PC - ' + output_df['Cost_type']\n",
+    "output_df['Cost_type_1'] = 'PC'\n",
+    "output_df['AIP'] = 'P'"
    ]
   },
   {
@@ -285,44 +278,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_dates_map = pd.DataFrame(columns=['YearMonth','MDM_province_code', 'Brand_Name', 'Level 1', 'Level 2', 'Level 3', 'Level 4', 'Level 5'])\n",
-    "all_types= pc_all_df[['MDM_province_code', 'Brand_Name', 'Level 1', 'Level 2', 'Level 3', 'Level 4', 'Level 5']].drop_duplicates()\n",
-    "for i in range(1,13):\n",
-    "    year_month = \"2020\" + str(i).zfill(2)\n",
-    "    all_types['YearMonth'] = year_month\n",
-    "    all_dates_map = all_dates_map.append(all_types, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_df = pd.merge(all_dates_map, pc_all_df, on=['YearMonth','MDM_province_code', 'Brand_Name', 'Level 1', 'Level 2', 'Level 3', 'Level 4', 'Level 5'], how='left')\n",
-    "output_df = output_df.fillna(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def format_yearmonth(year_month):\n",
-    "    return time.strftime('%Y/%m/%d', time.strptime(year_month,'%Y%m'))\n",
-    "\n",
-    "output_df['Date'] = output_df['YearMonth'].apply(lambda x : format_yearmonth(x))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_df = output_df[['Date', 'Brand_Name', 'MDM_province_code', 'Level 1', 'Level 2', 'Level 3', 'Level 4', 'Level 5', 'Spending_Value']]\n",
-    "output_df.columns = ['Date', 'Brand', 'Province', 'Level 1', 'Level 2', 'Level 3', 'Level 4', 'Level 5', 'Value']"
+    "output_df = output_df[['YearMonth', 'MDM_province_code', 'Cost_type_1', 'Cost_type_2', 'Cost_type_3', 'Cost_type_4', 'AIP', 'Brand', 'Spending_Value']]\n",
+    "output_df.columns = ['Date', 'Province', 'Cost_type_1', 'Cost_type_2', 'Cost_type_3', 'Cost_type_4', 'AIP', 'Brand', 'Spending_value']"
    ]
   },
   {
@@ -333,7 +290,7 @@
    "source": [
     "output_file_path = config['project_path'] + '/' \\\n",
     "                        + config['temp_folder_path'] + '/' \\\n",
-    "                        + config['pc_output']\n",
+    "                        + config['spending_PC']\n",
     "\n",
     "output_df.to_excel(output_file_path, index=False)"
    ]
