Remove dummy section

--- a/process/create_view_2.ipynb
+++ b/process/create_view_2.ipynb
@@ -511,52 +511,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "AnP_df = view2_df[view2_df['Type 1'] == 'Total A&P'].copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AnP_df = AnP_df.groupby(by = ['Date', 'Brand', 'Province', 'Type 2'])['Value'].sum().reset_index()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "AnP_df['Type 3'] = AnP_df['Type 2']\n",
-    "AnP_df['Type 1'] = 'Dummy'\n",
-    "AnP_df['Type 2'] = 'Total A&P'\n",
-    "\n",
-    "\n",
-    "AnP_df = AnP_df[view2_columns]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "view2_df = view2_df.append(AnP_df, ignore_index = True)\n",
-    "AnP_df[['Type 1','Type 2','Type 3']].drop_duplicates()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "view2_df = view2_df.fillna('')\n",
     "\n",
-    "an_df = view2_df[['Province', 'Type 1', 'Type 2', 'Type 3']].drop_duplicates()\n",
-    "nc_df = view2_df[['Province', 'Type 1', 'Type 2', 'Type 3']].drop_duplicates()\n",
+    "an_df = view2_df[view2_df['Brand'] == 'Aptamil'][['Province', 'Type 1', 'Type 2', 'Type 3']].drop_duplicates()\n",
+    "nc_df = view2_df[view2_df['Brand'] == 'Nutrilon'][['Province', 'Type 1', 'Type 2', 'Type 3']].drop_duplicates()\n",
     "an_df['Brand'] = 'Aptamil'\n",
     "nc_df['Brand'] = 'Nutrilon'\n",
     "all_df = an_df.append(nc_df, ignore_index=True)"
