Add logic for view 1

--- a/process/create_view_2.ipynb
+++ b/process/create_view_2.ipynb
@@ -84,10 +84,15 @@
     "input_df['KPI_value'] = input_df['KPI_value'].astype('float')\n",
     "input_df = input_df[input_df['Province']!='National']\n",
     "\n",
+    "\n",
     "wtd_df = input_df[(input_df['KPI'] == 'WTD - RI') | (input_df['KPI'] == 'WTD - MBS')].copy()\n",
     "wtd_df['KPI'] = wtd_df['KPI'] + ' (' + wtd_df['Brand'] + ')'\n",
+    "wtd_df['Brand'] = wtd_df['Brand'].apply(lambda x : get_brand_name(x))\n",
+    "\n",
     "share_df = input_df[input_df['KPI'] == 'Nielsen Value Market Share'].copy()\n",
-    "share_df['KPI'] = 'Market Share - ' + share_df['Brand']\n",
+    "share_df['Brand'] = share_df['Brand'].apply(lambda x : get_brand_name(x))\n",
+    "share_df = share_df.groupby(by = ['Date', 'Province', 'Brand', 'KPI'])['KPI_value'].sum().reset_index()\n",
+    "share_df['KPI'] = 'Market Share'\n",
     "\n",
     "nielsen_df = share_df.append(wtd_df, ignore_index=True)"
    ]
@@ -102,7 +107,7 @@
     "nielsen_df['Type 1'] = nielsen_df['KPI']\n",
     "nielsen_df['Type 2'] = nielsen_df['KPI']\n",
     "nielsen_df['Type 3'] = nielsen_df['KPI']\n",
-    "nielsen_df['Brand'] = nielsen_df['Brand'].apply(lambda x : get_brand_name(x))\n",
+    "\n",
     "\n",
     "nielsen_df = nielsen_df[view2_columns]"
    ]
@@ -406,8 +411,7 @@
     "input_df['Value'] = input_df['Spending_value'].astype('float')\n",
     "\n",
     "spen_media_df = input_df[input_df['Province'] != 'National'].copy()\n",
-    "spen_media_df['Brand'] = spen_media_df['Brand'].apply(lambda x : get_brand_name(x))\n",
-    "spen_media_df['Cost_type_2'] = spen_media_df['AIP'] + ' - ' + spen_media_df['Cost_type_2']"
+    "spen_media_df['Brand'] = spen_media_df['Brand'].apply(lambda x : get_brand_name(x))"
    ]
   },
   {
